<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deposit_title_label"/>

    <EditText
        android:id="@+id/deposit_edit_title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deposit_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deposit_detail_label"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_detail_bank"/>
        <Spinner
            android:id="@+id/deposit_edit_bank_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_detail_summ"/>
        <EditText
            android:id="@+id/deposit_edit_summ_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deposit_edit_summ_stub"
            android:ems="10"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_detail_currency"/>

        <Spinner
            android:id="@+id/deposit_edit_currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/deposit_edit_currency_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_detail_percent"/>
        <EditText
            android:id="@+id/deposit_edit_percentage_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deposit_edit_percent_stub"
            android:ems="10"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_detail_time"/>
        <EditText
            android:id="@+id/deposit_edit_time_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deposit_edit_time_stub"
            android:ems="10"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_detail_date"/>

        <EditText
            android:id="@+id/deposit_edit_date_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deposit_edit_date_stub"
            android:ems="10"
            android:inputType="date"
            android:focusable="false"/>

    </LinearLayout>

    <Button
        android:id="@+id/deposit_edit_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deposit_button_save"/>

</LinearLayout>