<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deposit_title_label"/>

            <TextView
                android:id="@+id/deposit_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deposit_title_hint"/>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deposit_detail_label"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_bank"/>
                <TextView
                    android:id="@+id/deposit_detail_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_bank_stub"
                    android:layout_marginHorizontal="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_summ"/>
                <TextView
                    android:id="@+id/deposit_summ_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_summ_stub"
                    android:layout_marginHorizontal="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_currency"/>
                <TextView
                    android:id="@+id/deposit_currency_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_currency_stub"
                    android:layout_marginHorizontal="10dp"/>
                <TextView
                    android:id="@+id/deposit_currency_rate_caption_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_rate"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/deposit_currency_rate_value_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_percent"/>
                <TextView
                    android:id="@+id/deposit_percentage_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_percent_stub"
                    android:layout_marginHorizontal="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_time"/>
                <TextView
                    android:id="@+id/deposit_time_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_time_stub"
                    android:layout_marginHorizontal="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_date"/>
                <TextView
                    android:id="@+id/deposit_date_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit_detail_date_stub"
                    android:layout_marginHorizontal="10dp"/>
            </LinearLayout>

            <TableLayout
                android:id="@+id/deposit_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#cccccc"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deposit_table_date"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deposit_table_profit"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deposit_table_summ"
                        android:layout_gravity="center_horizontal"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/deposit_button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deposit_button_delete"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>