<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/upperLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:padding="5dp"
                android:id="@+id/schedule_date_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_date"/>
            <EditText
                android:id="@+id/schedule_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/schedule_from_date"
                android:ems="10"
                android:inputType="date"
                android:focusable="false"/>
            <EditText
                android:id="@+id/schedule_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/schedule_to_date"
                android:ems="10"
                android:inputType="date"
                android:focusable="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/schedule_bank_checkbox"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_bank"/>
            <com.example.anti.cashdeposits.widget.MultiSpinner
                android:id="@+id/schedule_bank_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
            </com.example.anti.cashdeposits.widget.MultiSpinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/schedule_currency_checkbox"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_currency"/>
            <com.example.anti.cashdeposits.widget.MultiSpinner
                android:id="@+id/schedule_currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
            </com.example.anti.cashdeposits.widget.MultiSpinner>
        </LinearLayout>

    </LinearLayout>
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/deposit_pie_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/upperLayout"/>
</RelativeLayout>